# pypack

./: .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  dependency-diff.py  pyproject.toml  requirements.txt
.github/workflows/: build-wheels.yaml  lint.yaml
requirements/: linux-x64-py37-requirements.txt  linux-x64-py38-requirements.txt  linux-x64-py39-requirements.txt  macos-x64-py37-requirements.txt  macos-x64-py38-requirements.txt  macos-x64-py39-requirements.txt  windows-x64-py37-requirements.txt  windows-x64-py38-requirements.txt  windows-x64-py39-requirements.txt
src/pypack/: version.py
